--- a/css/style.css
+++ b/css/style.css
@@ -287,3 +287,37 @@ footer p {
   border-radius: 8px;
 }
 
+/** ABOUT PAGE **/
+.section-header-v2 {
+  background-color: whitesmoke;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 40px;
+  color: black;
+}
+
+.title-v2 a {
+  font-size: 27px;
+  color: black;
+  text-decoration: none;
+}
+
+/**** Navigation Bar ****/
+.nav-elements-v2 {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 20px;
+  font-size: 18px;
+}
+
+.nav-elements-v2 a {
+  text-decoration: none;
+  color: black;
+}
