--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body > main {
   flex: 1;
 }
 
-/**** Header Section ****/
+/** HOME PAGE **/
 header {
   display: flex;
   justify-content: space-between;
@@ -24,9 +24,13 @@ header {
 }
 
 .title a {
-  font-size: 27px;
+  font-size: 19px;
   color: white;
   text-decoration: none;
+  font-family: "Instrument Serif", serif;
+  font-weight: 100;
+  font-style: italic;
+  letter-spacing: 1.25px;
 }
 
 /**** Navigation Bar ****/
@@ -42,20 +46,23 @@ header {
 .nav-elements a {
   text-decoration: none;
   color: white;
+  font-family: "Inter", sans-serif;
+  font-weight: 200;
 }
 
 /**** Hero Section ****/
 .section-header {
-  background-image: url(/images/blue\ text.jpg);
+  background-image: url(/images/hero-image-6.JPG);
   background-size: cover;
-  background-position: center;
+  background-position: center 90%;
   background-repeat: no-repeat;
-  height: 400px;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   text-align: center;
   padding: 20px;
   color: white;
+  
 }
 
 .hero-content {
@@ -65,19 +72,37 @@ header {
 }
 
 .hero-content h2 {
-  font-size: 37px;
+  font-size: 45px;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-family: "Instrument Serif", serif;
+  font-weight: 400;
+  font-size: 30px;
+
 }
 
 .hero-content p {
-  font-size: 18px;
+  font-size: 22px;
   margin-bottom: 25px;
+  font-family: "Inter", sans-serif;
+  font-weight: 200;
+
 }
 
 .hero-content button {
-  font-size: 20px;
+  font-size: 16px;
   margin-bottom: 100px;
+  font-family: "Instrument Serif", serif;
+  font-weight: 100;
+  width: 150px;
+  height: 35px;
+  background-color: rgba(56, 42, 27);
+  color: white;
+  border-radius: 10px;
+}
+
+.hero-content button:hover{
+  background-color: rgb(85, 66, 53);
 }
 
 /**** Section: About Me & Message ****/
@@ -88,16 +113,20 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: yellow;
+  background-color: whitesmoke;
 }
 
 .section-message h2 {
-  font-size: 22px;
+  font-size: 27px;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
 }
 
 .section-message p {
   font-size: 16px;
   padding: 10px;
+  font-family: "Inter", sans-serif;
+  font-weight: 200;
 }
 
 .about-me-teaser {
@@ -106,22 +135,39 @@ header {
   text-align: center;
   justify-content: flex-end;
   height: 300px;
-  background-color: red;
+  background-image: url(/images/hero-image-4.JPG);
+  background-size: cover;
+  background-position: center 20%;
 }
 
 .about-me-teaser h2 {
-  font-size: 25px;
+  font-size: 27px;
+  font-family: "Instrument Serif", serif;
+  font-weight: 200;
+  font-style: italic;
+  color: white;
 }
 
 .about-me-teaser p {
   font-size: 20px;
   margin-top: 15px;
   margin-bottom: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  color: white;
 }
 
 .about-me-button {
-  font-size: 13px;
+  font-size: 16px;
   margin-bottom: 100px;
+  font-family: "Instrument Serif", serif;
+  font-weight: 100;
+  font-style: italic;
+  width: 150px;
+  height: 35px;
+  background-color: rgba(56, 42, 27);
+  color: white;
+  border-radius: 10px;
 }
 
 /**** Highlights and Updates Section ****/
@@ -131,21 +177,26 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  display: flex;
-  justify-content: space-between;
-
+  gap: 32px;
 }
 
-.into-hightlighs h2{
+.highlights-title{
     margin-bottom: 40px;
+    font-family: "Instrument Serif", serif;
+    font-weight: 400;
 }
-
 
 .updates {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 40px;
+}
+
+.updates h4{
+  font-size: 18px;
+}
+.updates p{
+  font-size: 15px;
 }
 
 .update1,
@@ -160,10 +211,7 @@ header {
 .update2 img,
 .update3 img {
   width: 100%;
-  max-width: 200px;
-  height: auto;
-  margin-bottom: 16px;
-  margin-top: 16px;
+  height: 100%;
 }
 
 /**** Footer Section ****/
@@ -239,11 +287,11 @@ footer p {
 /** PROJECTS PAGE **/
 /**** Hero Section ****/
 .section-header.projects {
-  background-image: url(/images/blue\ text.jpg);
+  background-image: url(/images/hero-image-3.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: center 20%;
   background-repeat: no-repeat;
-  height: 400px;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -261,10 +309,16 @@ footer p {
   font-size: 40px;
   margin-top: 60px;
   margin-bottom: 15px;
+  font-family: "Instrument Serif", serif;
+  font-weight: 400;
+  font-style: italic;
+  letter-spacing: 2px;
 }
 .hero-content-projects p {
   font-size: 18px;
   margin-bottom: 50px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 
 .projects-container {
@@ -339,6 +393,96 @@ footer p {
   font-weight: 200;
 }
 
+.page-title-about {
+  padding-left: 50px;
+  font-size: 36px;
+  font-family: "Inter", sans-serif;
+}
+
+.submessage-about {
+  padding-left: 50px;
+  padding-top: 10px;
+  font-size: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 100;
+}
+
+.about-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
+  padding: 2rem;
+  flex-wrap: wrap;
+}
+
+.about-text {
+  flex: 1;
+  min-width: 250px;
+}
+
+.me {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 250px;
+}
+
+.me img {
+  max-width: 80%;
+  height: 80%;
+  border-radius: 8px;
+}
+
+.story{
+  padding-left: 50px;
+  padding-top: 25px;
+  font-size: 18px;
+  line-height: 25px;
+  font-family: "Inter", sans-serif;
+  font-weight: 100;
+}
+
+.past{
+  padding-top: 10px;
+}
+
+.future-present{
+  padding-top: 8px;
+}
+
+.ad {
+  padding-top: 8px;
+  padding-bottom: 10px;
+}
+
+.contact-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 1rem;
+  padding-left: 50px;
+}
+
+.contact-submit-about {
+  width: fit-content;
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  font-family: "Instrument Serif", serif;
+  font-weight: 100;
+  font-style: italic;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+}
+
+.contact-submit-about:hover {
+  background-color: #333;
+}
+
+
 /** CONTACT PAGE **/
 .page-title {
   padding: 40px;
@@ -366,7 +510,7 @@ footer p {
   font-style: italic;
 }
 
-.contact-me-submes{
+.submessage {
   font-family: "Inter", sans-serif;
   font-weight: 100;
 }
@@ -399,11 +543,38 @@ footer p {
   height: 35px;
   background-color: black;
   color: white;
-  font-family: "Inter", sans-serif;
+  font-family: "Instrument Serif", serif;
   font-weight: 100;
+  font-style: italic;
 }
 
 label{
   font-family: "Inter", sans-serif;
   font-weight: 100;
+}
+
+.contact-submit:hover{
+  background-color: #333;
+}
+.form-row {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.half-width {
+  flex: 1;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
 }
